config-root/namespaces/jx-production/go-chaos/go-chaos-go-chaos-deploy.yaml
# Source: go-chaos/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-chaos-go-chaos
  labels:
    app: go-chaos-go-chaos
    chart: "go-chaos-0.0.10"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'go-chaos'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: go-chaos-go-chaos
  replicas: 1
  template:
    metadata:
      labels:
        app: go-chaos-go-chaos
        chart: "go-chaos-0.0.10"
    spec:
      serviceAccountName: go-chaos-go-chaos
      containers:
        - name: go-chaos
          image: "gcr.io/jenkinsxio/go-chaos:0.0.10"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
