config-root/namespaces/jx-production/go-chaos/go-chaos-svc.yaml
# Source: go-chaos/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-chaos
  labels:
    chart: "go-chaos-0.0.5"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: go-chaos-go-chaos
