config-root/namespaces/jx-production/go-chaos/go-chaos-ingress.yaml
# Source: go-chaos/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: go-chaos
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: go-chaos
              servicePort: 80
      host: go-chaos-jx-production.dev.jenkins-x.me
